# registergpt

./: .gitignore  AGENTS.md  README.md  bootstrap.sh  model_v4.py  pyproject.toml  setup.sh  train.py  wave_model.py
artifacts/: rank32_manifest.json
core/: base.py  registry.py
docs/: brain_wave_gpt.md
logs/: 2f007738-234f-405a-b12e-e3be33c9572e.txt  2f007738-234f-405a-b12e-e3be33c9572e_ckpt.pt  2f007738-234f-405a-b12e-e3be33c9572e_model.int8.ptz  2f007738-234f-405a-b12e-e3be33c9572e_model.pt  a7f963ea-d9a4-468c-8f7b-7e8b2ebeec46.txt  a7f963ea-d9a4-468c-8f7b-7e8b2ebeec46_manifest.json  a7f963ea-d9a4-468c-8f7b-7e8b2ebeec46_model.int8.ptz  a7f963ea-d9a4-468c-8f7b-7e8b2ebeec46_model.pt  b84c2a3f-c41b-4502-85eb-fae38bd684ad.txt  b84c2a3f-c41b-4502-85eb-fae38bd684ad_ckpt.pt  b84c2a3f-c41b-4502-85eb-fae38bd684ad_manifest.json  b84c2a3f-c41b-4502-85eb-fae38bd684ad_model.int8.ptz  b84c2a3f-c41b-4502-85eb-fae38bd684ad_model.pt  c8b7a7a1-8ca2-49a5-ac57-3453f13a19c9.txt  c8b7a7a1-8ca2-49a5-ac57-3453f13a19c9_ckpt.pt  c8b7a7a1-8ca2-49a5-ac57-3453f13a19c9_manifest.json  c8b7a7a1-8ca2-49a5-ac57-3453f13a19c9_model.int8.ptz  c8b7a7a1-8ca2-49a5-ac57-3453f13a19c9_model.pt
v10_policy/: README.md  model.py
v11_brainwave/: model.py
v11_tpg/: model.py
v12_sparse_register/: model.py
v13_sparse_embed/: model.py
v14_adaptive/: model.py
v15_predictive/: model.py
v16_columnar/: model.py
v1_shared_attention/: model.py
v2_causal_conv/: README.md  model.py
v3_assoc_memory/: model.py
v4_param_optimized/: model.py
v5_gauss_fft/: model.py
v6_brain_wave/: README.md  (+1 more)
(+6 files in other folders)
